# docker-mcp-core-daemon

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
