[project]
name            = "mcp-server"
version         = "0.0.1"
description     = "MCP Server with official Python SDK"
authors         = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"
dependencies    = [
  "mcp>=1.0.0",
  "python-json-logger==2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0"
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length    = 88
target-version = "py311"

[tool.black]
line-length    = 88
target-version = ["py311"]
